subiendo mejoras de tarea

--- a/Registro/_Imports.razor
+++ b/Registro/_Imports.razor
@@ -9,6 +9,6 @@
 @using Registro
 @using Registro.Shared
 @using Registro.BLL
-{
-    
-}
+@using Radzen.Blazor
+@using Radzen
+@using Registro.Models
