--- a/Registro/Pages/_Layout.cshtml
+++ b/Registro/Pages/_Layout.cshtml
@@ -8,9 +8,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="~/" />
+
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="Registro.styles.css" rel="stylesheet" />
+
+   <link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css">
+    
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
@@ -28,5 +32,8 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
+    
 </body>
 </html>
